# dry-dock

./: .gitattributes  .gitignore  LICENSE.md  README.md  build-and-install.sh
dry-dock/: AppConfig.json  Cargo.toml
dry-dock/assets/icons/: app_icon.icns
dry-dock/assets/llama/Resources/: libggml-base.0.0.0.dylib  libggml-base.0.dylib  libggml-base.dylib  libmlx.dylib  libmlxc.dylib  mlx.metallib  ollama  ollama-mlx
dry-dock/docs/: eframe-basics-guide.md  eframe-popups-windows-guide.md  project-structure-guide.md  rss-feeds-guide.md  sqlite-database-guide.md  terminal-bridge-service-guide.md
dry-dock/src/: main.rs
dry-dock/src/app/: active_screen.rs  app_state.rs  mod.rs  modal_renderer.rs  screen_renderer.rs
dry-dock/src/common/: helper.rs
dry-dock/src/dal/: db_context.rs  mod.rs
dry-dock/src/dal/repositories/: bookmarks_repository.rs  feeds_repository.rs  logs_repository.rs  mod.rs  notes_repository.rs
dry-dock/src/models/: bookmark.rs  chat_message.rs  config.rs  feed.rs  mod.rs  note.rs
dry-dock/src/services/: assistant_bridge_service.rs  bookmark_service.rs  log_service.rs  mod.rs  note_service.rs  rss_service.rs  terminal_bridge_service.rs
dry-dock/src/ui/: home.rs  menu.rs  mod.rs
dry-dock/src/ui/modals/: active_modal.rs  add_bookmark_modal.rs  add_feed_modal.rs  create_note_modal.rs  log_modal.rs  manage_feeds_modal.rs  mod.rs  modal_factory.rs  modal_trait.rs  settings_modal.rs  update_bookmark_modal.rs  update_note_modal.rs  view_note_modal.rs
dry-dock/src/ui/screens/: assistant_screen.rs  bookmarks_screen.rs  feeds_screen.rs  mod.rs  (+3 more)
(+3 files in other folders)
