[package]
name = "dry-dock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
eframe = "0.33.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
once_cell = "1.19"
dirs = "5.0"