[package]
name = "dry-dock"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Dry Dock"
identifier = "com.logangarrett.dry-dock"
version = "1.0.0"
copyright = "Copyright © 2026 Logan Garrett. All rights reserved."
category = "public.app-category.productivity"
short_description = "Personal productivity application"
long_description = "Dry Dock - RSS feeds, notes, bookmarks, and more as I need them."
icon = ["assets/icons/app_icon.icns", "assets/icons/app_icon.png"]
resources = ["AppConfig.json", "assets/icons/app_icon.png", "assets/icons/app_icon.icns"]

[dependencies]
chrono = "0.4.42"
eframe = "0.33.3"
pulldown-cmark = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
once_cell = "1.19"
dirs = "5.0"
rss = "2.0"
atom_syndication = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.36", features = ["full"] }
opener = "0.7"
webbrowser = "1.0"
image = "0.25.9"
job_scheduler = "1.2.1"
